# 65C02

./: CMakeLists.txt  README.md
src/: cpu.cpp  cpu.h
src/cpu/: cpu.cpp  cpu.h  instructions.h
src/cpu/instructions/: instruction_LDA.cpp  instruction_LDA.h  instruction_LDX.cpp  instruction_LDX.h  instruction_LDY.cpp  instruction_LDY.h  instruction_handler.h
src/memory/: memory_512Kb.cpp  memory_512Kb.h
tests/: CMakeLists.txt  test_cpu.cpp  test_cpu_LDA_instructions.cpp  test_cpu_LDX_instructions.cpp  test_cpu_LDY_instructions.cpp  test_cpu_lda_instructions.cpp  test_cpu_with_memory.cpp  test_memory_512Kb.cpp
